2013-08-21  Richard Earnshaw  <rearnsha@arm.com>

	PR target/56979
	* arm.c (aapcs_vfp_allocate): Decompose the argument if the
	suggested mode for the assignment isn't compatible with the
	registers required.

2013-08-20  Alan Modra  <amodra@gmail.com>

	PR target/57865
	* config/rs6000/rs6000.c (rs6000_emit_prologue): Correct ool_adjust.
	(rs6000_emit_epilogue): Likewise.

2013-08-19  Peter Bergner  <bergner@vnet.ibm.com>
	    Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline
	* config/rs6000/dfp.md (*negtd2_fpr): Handle non-overlapping destination
	and source operands.

2013-08-18  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/58006
	* tree-parloops.c (take_address_of): Don't ICE if get_name
	returns NULL.
	(eliminate_local_variables_stmt): Remove clobber stmts.

2013-08-16  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/58164
	* gimple.c (walk_stmt_load_store_addr_ops): For visit_addr
	walk gimple_goto_dest of GIMPLE_GOTO.

	PR tree-optimization/58165
	* tree-call-cdce.c (shrink_wrap_one_built_in_call): If
	bi_call must be the last stmt in a bb, don't split_block, instead
	use fallthru edge from it and give up if there is none.
	Release conds vector when returning early.

2013-08-15  David Given  <dg@cowlark.com>

	Backport from mainline
	2013-04-26  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (process_alt_operands): Use #if HAVE_ATTR_enable
	instead of #ifdef.

2013-08-14  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/58145
	* tree-sra.c (build_ref_for_offset): If prev_base has
	TREE_THIS_VOLATILE or TREE_SIDE_EFFECTS, propagate it to MEM_REF.

2013-08-14  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/htmxlintrin.h: Add file missing from last commit.
	* config/s390/htmintrin.h: Likewise.
	* config/s390/s390intrin.h: Likewise.

2013-08-14  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2013-08-13  Uros Bizjak  <ubizjak@gmail.com>
