@@ -1,3 +1,9 @@
+2013-08-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/58209
+	* tree-tailcall.c (find_tail_calls): Give up for pointer result types
+	if m or a is non-NULL.
+
 2013-08-21  Richard Earnshaw  <rearnsha@arm.com>
 
 	PR target/56979
